Bug 226238 - Histogram never get completed in image editor after any change in the image
Summary: Histogram never get completed in image editor after any change in the image
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Core (other bugs)
Version First Reported In: 1.1.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-11 04:47 UTC by Manuel
Modified: 2022-02-03 11:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel 2010-02-11 04:47:30 UTC
Version:           1.1.0 (using KDE 4.3.5)
OS:                Linux
Installed from:    Ubuntu Packages

This is new to 1.1.0, after the first image's change , the histogram gets into a calculation cycle which never finish.

This behavior does not appear in level setting
Comment 1 Marcel Wiesweg 2010-02-20 16:46:25 UTC
SVN commit 1093306 by mwiesweg:

Let histogram calculation finish when returning from image plugin.

Now obviously, a signalSelectionChanged is emitted when returning from a tool.
If the selection is not actually changed, the computation will be stopped,
but HistogramBox will not begin a new one, because nothing really changed.

BUG: 226238

 M  +2 -1      NEWS  
 M  +3 -1      libs/imageproperties/imagepropertiescolorstab.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1093306