Let histogram calculation finish when returning from image plugin.

Now obviously, a signalSelectionChanged is emitted when returning from a tool.
If the selection is not actually changed, the computation will be stopped,
but HistogramBox will not begin a new one, because nothing really changed.

BUG: 226238

svn path=/trunk/extragear/graphics/digikam/; revision=1093306